--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^10.7.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.0",
+    "openai": "^5.8.2",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^2.0.0",
