--- a/package.json
+++ b/package.json
@@ -17,17 +17,19 @@
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "archiver": "^7.0.1",
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^17.0.1",
     "firebase": "^10.7.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.0",
+    "node-cron": "^4.2.0",
     "openai": "^5.8.2",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^2.0.0",
-    "zod": "^3.22.0"
+    "zod": "^3.25.71"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
